[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/jigsaw_pieces.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Jigsaw.gd" type="Script" id=2]
[ext_resource path="res://outline_shader.tres" type="Shader" id=3]

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
shader = ExtResource( 3 )
shader_param/outline_color = Color( 0.329412, 0.866667, 0.952941, 1 )
shader_param/opacity = 1.0

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 25, 25 )

[node name="Jigsaw" type="Node2D" groups=["pieces"]]
script = ExtResource( 2 )

[node name="JigsawPieces" type="Sprite" parent="."]
material = SubResource( 2 )
position = Vector2( -1, -1 )
texture = ExtResource( 1 )
centered = false
hframes = 16
frame = 5

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 25, 25 )
shape = SubResource( 1 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
